chore: Add EAS configuration and production deployment scripts

--- a/app.json
+++ b/app.json
@@ -3,6 +3,9 @@
     "name": "VERTIKAL",
     "slug": "vertikal-mobile",
     "version": "1.0.0",
+    "extra": {
+      "apiUrl": process.env.EXPO_PUBLIC_API_URL || "https://api.vertikal.com"
+    },
     "orientation": "portrait",
     "icon": "./assets/icon.png",
     "userInterfaceStyle": "dark",
