--- a/netlify.toml
+++ b/netlify.toml
@@ -1,5 +1,5 @@
 # Netlify Configuration
-# For video embed URL injection via build-time replacement
+# Static HTML site deployment
 
 [build]
   command = "echo 'Static site - no build needed'"
@@ -12,9 +12,37 @@
 [[plugins]]
   package = "@netlify/plugin-build-env"
 
-# Redirects (if needed)
+# Redirects - SPA routing support
+# Netlify automatically excludes static files (images, JS, CSS, etc.) from redirects
 [[redirects]]
   from = "/*"
   to = "/index.html"
   status = 200
 
+# Headers for security and performance
+[[headers]]
+  for = "/*"
+  [headers.values]
+    X-Frame-Options = "DENY"
+    X-Content-Type-Options = "nosniff"
+    Referrer-Policy = "strict-origin-when-cross-origin"
+
+[[headers]]
+  for = "/*.html"
+  [headers.values]
+    Cache-Control = "public, max-age=3600"
+
+[[headers]]
+  for = "/*.js"
+  [headers.values]
+    Cache-Control = "public, max-age=31536000, immutable"
+
+[[headers]]
+  for = "/*.css"
+  [headers.values]
+    Cache-Control = "public, max-age=31536000, immutable"
+
+[[headers]]
+  for = "/assets/*"
+  [headers.values]
+    Cache-Control = "public, max-age=31536000, immutable"
