--- a/.github/workflows/deploy-cloudflare.yml
+++ b/.github/workflows/deploy-cloudflare.yml
@@ -4,7 +4,7 @@ on:
   workflow_dispatch:
   push:
     branches:
-      - '**'         # all branches -> production or preview based on branch in Cloudflare
+      - '**'
   pull_request:
 
 env:
@@ -16,8 +16,15 @@ jobs:
     name: Deploy vertikalapp
     runs-on: ubuntu-latest
     steps:
-      - name: Checkout repo
-        uses: actions/checkout@v4
+      - uses: actions/checkout@v4
+
+      # Step 1: Build caching foundation (no-op for pure static, ready for future builds)
+      - name: Set up Node with cache (if Node project)
+        if: hashFiles('package-lock.json') != ''
+        uses: actions/setup-node@v4
+        with:
+          node-version: 20
+          cache: npm
 
       - name: Verify directory exists
         run: |
@@ -41,8 +48,14 @@ jobs:
     runs-on: ubuntu-latest
     needs: deploy-vertikalapp
     steps:
-      - name: Checkout repo
-        uses: actions/checkout@v4
+      - uses: actions/checkout@v4
+
+      - name: Set up Node with cache (if Node project)
+        if: hashFiles('package-lock.json') != ''
+        uses: actions/setup-node@v4
+        with:
+          node-version: 20
+          cache: npm
 
       - name: Verify directory exists
         run: |
@@ -66,8 +79,14 @@ jobs:
     runs-on: ubuntu-latest
     needs: deploy-investors
     steps:
-      - name: Checkout repo
-        uses: actions/checkout@v4
+      - uses: actions/checkout@v4
+      
+      - name: Set up Node with cache (if Node project)
+        if: hashFiles('package-lock.json') != ''
+        uses: actions/setup-node@v4
+        with:
+          node-version: 20
+          cache: npm
 
       - name: Verify directory exists
         run: |
@@ -91,8 +110,14 @@ jobs:
     runs-on: ubuntu-latest
     needs: deploy-creators
     steps:
-      - name: Checkout repo
-        uses: actions/checkout@v4
+      - uses: actions/checkout@v4
+
+      - name: Set up Node with cache (if Node project)
+        if: hashFiles('package-lock.json') != ''
+        uses: actions/setup-node@v4
+        with:
+          node-version: 20
+          cache: npm
 
       - name: Verify directory exists
         run: |
@@ -158,4 +183,3 @@ jobs:
           )
 
           curl -X POST -H 'Content-type: application/json' --data "$payload" "$SLACK_WEBHOOK_URL"
-
