--- a/.github/workflows/deploy-cloudflare.yml
+++ b/.github/workflows/deploy-cloudflare.yml
@@ -243,6 +243,64 @@ jobs:
           branch: ${{ github.ref_name }}
           commitHash: ${{ github.sha }}
 
+  deploy-beta:
+    name: Deploy beta-vertikalapp
+    runs-on: ubuntu-latest
+    needs: deploy-networks
+    steps:
+      - uses: actions/checkout@v4
+
+      # Step 2: Monorepo detection - deploy only if changed
+      - name: Determine if this project changed
+        id: changed
+        env:
+          PROJECT_DIR: beta
+        run: |
+          if [ "${{ github.event_name }}" = "workflow_dispatch" ]; then
+            echo "changed=true" >> $GITHUB_OUTPUT
+            exit 0
+          fi
+
+          git fetch --depth=2 origin ${{ github.ref }}
+
+          CHANGED=$(git diff --name-only HEAD^ HEAD | grep "^public/" || true)
+
+          if echo "$CHANGED" | grep -q "^public/$PROJECT_DIR"; then
+            echo "changed=true" >> $GITHUB_OUTPUT
+          else
+            echo "changed=false" >> $GITHUB_OUTPUT
+          fi
+
+      - name: Skip if not changed
+        if: steps.changed.outputs.changed == 'false'
+        run: echo "No changes detected for beta-vertikalapp. Skipping."
+
+      - name: Set up Node with cache (if Node project)
+        if: steps.changed.outputs.changed == 'true' && hashFiles('package-lock.json') != ''
+        uses: actions/setup-node@v4
+        with:
+          node-version: 20
+          cache: npm
+
+      - name: Verify directory exists
+        if: steps.changed.outputs.changed == 'true'
+        run: |
+          if [ ! -d "./public/beta" ]; then
+            echo "Directory ./public/beta does not exist"
+            exit 1
+          fi
+
+      - name: Publish to Cloudflare Pages
+        if: steps.changed.outputs.changed == 'true'
+        uses: cloudflare/pages-action@v1
+        with:
+          apiToken: ${{ env.CLOUDFLARE_API_TOKEN }}
+          accountId: ${{ env.CLOUDFLARE_ACCOUNT_ID }}
+          projectName: beta-vertikalapp
+          directory: ./public/beta
+          branch: ${{ github.ref_name }}
+          commitHash: ${{ github.sha }}
+
   notify-slack:
     name: Notify Slack
     runs-on: ubuntu-latest
@@ -251,6 +309,7 @@ jobs:
       - deploy-investors
       - deploy-creators
       - deploy-networks
+      - deploy-beta
     if: always()
     steps:
       - name: Send Slack notification
@@ -263,6 +322,7 @@ jobs:
           RESULT_INVESTORS: ${{ needs.deploy-investors.result }}
           RESULT_CREATORS: ${{ needs.deploy-creators.result }}
           RESULT_NETWORKS: ${{ needs.deploy-networks.result }}
+          RESULT_BETA: ${{ needs.deploy-beta.result }}
         run: |
           if [ -z "$SLACK_WEBHOOK_URL" ]; then
             echo "SLACK_WEBHOOK_URL not set; skipping Slack notification."
@@ -270,7 +330,7 @@ jobs:
           fi
 
           OVERALL_STATUS="success"
-          for r in "$RESULT_VERTIKALAPP" "$RESULT_INVESTORS" "$RESULT_CREATORS" "$RESULT_NETWORKS"; do
+          for r in "$RESULT_VERTIKALAPP" "$RESULT_INVESTORS" "$RESULT_CREATORS" "$RESULT_NETWORKS" "$RESULT_BETA"; do
             if [ "$r" != "success" ]; then
               OVERALL_STATUS="failure"
             fi
@@ -283,7 +343,8 @@ jobs:
             • vertikalapp: $RESULT_VERTIKALAPP
             • investors-vertikalapp: $RESULT_INVESTORS
             • creators-vertikalapp: $RESULT_CREATORS
-            • networks-vertikalapp: $RESULT_NETWORKS\n
+            • networks-vertikalapp: $RESULT_NETWORKS
+            • beta-vertikalapp: $RESULT_BETA\n
             Details: $RUN_URL"
           }
           EOF
