--- a/package.json
+++ b/package.json
@@ -8,7 +8,9 @@
     "android": "expo start --android",
     "ios": "expo start --ios",
     "web": "expo start --web",
-    "build:creators": "mkdir -p dist/creators && cp -r public/creators/* dist/creators/"
+    "build:creators": "mkdir -p dist/creators && cp -r public/creators/* dist/creators/",
+    "test": "playwright test",
+    "test:ui": "playwright test --ui"
   },
   "dependencies": {
     "@react-native-async-storage/async-storage": "2.2.0",
@@ -21,7 +23,7 @@
     "expo-av": "~16.0.8",
     "expo-blur": "^15.0.8",
     "expo-haptics": "^15.0.8",
-    "expo-image": "~2.0.0",
+    "expo-image": "~3.0.11",
     "expo-linear-gradient": "~15.0.8",
     "expo-secure-store": "~15.0.8",
     "expo-status-bar": "~3.0.9",
@@ -35,11 +37,12 @@
     "react-native-reanimated": "~4.1.1",
     "react-native-safe-area-context": "~5.6.0",
     "react-native-screens": "~4.16.0",
-    "react-native-svg": "^15.15.1",
+    "react-native-svg": "15.12.1",
     "tailwindcss": "3.3.2"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
+    "@playwright/test": "^1.40.0",
     "@prisma/client": "^5.22.0",
     "@types/node": "^25.0.1",
     "@types/react": "~19.1.10",
