--- a/package.json
+++ b/package.json
@@ -19,11 +19,13 @@
     "@sentry/react-native": "^7.7.0",
     "@tanstack/react-query": "^5.90.12",
     "axios": "^1.13.2",
+    "base64-arraybuffer": "^1.0.2",
     "expo": "54",
     "expo-av": "~16.0.8",
     "expo-blur": "^15.0.8",
     "expo-haptics": "^15.0.8",
     "expo-image": "~3.0.11",
+    "expo-image-picker": "~17.0.10",
     "expo-linear-gradient": "~15.0.8",
     "expo-secure-store": "~15.0.8",
     "expo-status-bar": "~3.0.9",
@@ -42,6 +44,7 @@
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
+    "@expo/ngrok": "^4.1.3",
     "@playwright/test": "^1.40.0",
     "@prisma/client": "^5.22.0",
     "@types/node": "^25.0.1",
