--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@react-navigation/bottom-tabs": "^6.0.0",
     "@react-navigation/native": "^6.0.0",
     "@sentry/react-native": "^7.7.0",
+    "@supabase/supabase-js": "^2.89.0",
     "@tanstack/react-query": "^5.90.12",
     "axios": "^1.13.2",
     "base64-arraybuffer": "^1.0.2",
