--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "expo": "54",
     "expo-av": "~16.0.8",
     "expo-blur": "^15.0.8",
+    "expo-file-system": "~19.0.21",
     "expo-haptics": "^15.0.8",
     "expo-image": "~3.0.11",
     "expo-image-picker": "~17.0.10",
@@ -41,6 +42,7 @@
     "react-native-safe-area-context": "~5.6.0",
     "react-native-screens": "~4.16.0",
     "react-native-svg": "15.12.1",
+    "react-native-worklets": "0.5.1",
     "tailwindcss": "3.3.2"
   },
   "devDependencies": {
